--- a/Projeto 3/Teste_Luiz/ProjetoCont/editar.ui
+++ b/Projeto 3/Teste_Luiz/ProjetoCont/editar.ui
@@ -22,6 +22,9 @@
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QScrollArea" name="scrollArea">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
      <property name="widgetResizable">
       <bool>true</bool>
      </property>
@@ -29,7 +32,7 @@
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>0</y>
+        <y>-3</y>
         <width>819</width>
         <height>618</height>
        </rect>
