--- a/Projeto 3/Teste_Luiz/ProjetoCont/relatorio_de_produtos.ui
+++ b/Projeto 3/Teste_Luiz/ProjetoCont/relatorio_de_produtos.ui
@@ -29,7 +29,7 @@
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>0</y>
+        <y>-47</y>
         <width>818</width>
         <height>618</height>
        </rect>
@@ -121,6 +121,9 @@
             <layout class="QHBoxLayout" name="horizontalLayout">
              <item>
               <widget class="QPushButton" name="BTN_EXCLUIR">
+               <property name="enabled">
+                <bool>false</bool>
+               </property>
                <property name="text">
                 <string>Excluir</string>
                </property>
@@ -128,6 +131,9 @@
              </item>
              <item>
               <widget class="QPushButton" name="BTN_EDITAR">
+               <property name="enabled">
+                <bool>false</bool>
+               </property>
                <property name="text">
                 <string>Editar</string>
                </property>
