--- a/Projeto 3/Teste_Luiz/ProjetoCont/cadastro.ui
+++ b/Projeto 3/Teste_Luiz/ProjetoCont/cadastro.ui
@@ -25,7 +25,7 @@
         <x>0</x>
         <y>0</y>
         <width>824</width>
-        <height>618</height>
+        <height>518</height>
        </rect>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout_6">
@@ -34,7 +34,7 @@
          <property name="minimumSize">
           <size>
            <width>800</width>
-           <height>600</height>
+           <height>500</height>
           </size>
          </property>
          <property name="widgetResizable">
@@ -46,7 +46,7 @@
             <x>0</x>
             <y>0</y>
             <width>804</width>
-            <height>598</height>
+            <height>498</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -270,6 +270,9 @@
                    <property name="enabled">
                     <bool>false</bool>
                    </property>
+                   <property name="decimals">
+                    <number>3</number>
+                   </property>
                   </widget>
                  </item>
                 </layout>
@@ -294,7 +297,7 @@
                   <bool>false</bool>
                  </property>
                  <property name="decimals">
-                  <number>2</number>
+                  <number>3</number>
                  </property>
                  <property name="maximum">
                   <double>999.000000000000000</double>
