--- a/Projeto 3/Teste_Luiz/ProjetoCont/editar.ui
+++ b/Projeto 3/Teste_Luiz/ProjetoCont/editar.ui
@@ -19,7 +19,7 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
+  <layout class="QHBoxLayout" name="horizontalLayout_7">
    <item>
     <widget class="QScrollArea" name="scrollArea">
      <property name="enabled">
@@ -32,18 +32,18 @@
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>-3</y>
-        <width>819</width>
-        <height>618</height>
+        <y>0</y>
+        <width>833</width>
+        <height>608</height>
        </rect>
       </property>
-      <layout class="QHBoxLayout" name="horizontalLayout_6">
+      <layout class="QVBoxLayout" name="verticalLayout">
        <item>
         <widget class="QScrollArea" name="scrollArea_2">
          <property name="minimumSize">
           <size>
            <width>800</width>
-           <height>600</height>
+           <height>500</height>
           </size>
          </property>
          <property name="widgetResizable">
@@ -54,8 +54,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>799</width>
-            <height>598</height>
+            <width>813</width>
+            <height>588</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -237,6 +237,9 @@
                    <property name="enabled">
                     <bool>false</bool>
                    </property>
+                   <property name="decimals">
+                    <number>3</number>
+                   </property>
                   </widget>
                  </item>
                 </layout>
@@ -261,7 +264,7 @@
                   <bool>false</bool>
                  </property>
                  <property name="decimals">
-                  <number>2</number>
+                  <number>3</number>
                  </property>
                  <property name="maximum">
                   <double>999.000000000000000</double>
