--- a/Projeto 3/Teste_Luiz/ProjetoCont/relatorio_de_produtos.ui
+++ b/Projeto 3/Teste_Luiz/ProjetoCont/relatorio_de_produtos.ui
@@ -12,14 +12,14 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>800</width>
-    <height>600</height>
+    <width>0</width>
+    <height>0</height>
    </size>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_2">
+  <layout class="QHBoxLayout" name="horizontalLayout_3">
    <item>
     <widget class="QScrollArea" name="scrollArea">
      <property name="widgetResizable">
@@ -29,18 +29,18 @@
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>-47</y>
+        <y>0</y>
         <width>818</width>
-        <height>618</height>
+        <height>563</height>
        </rect>
       </property>
-      <layout class="QHBoxLayout" name="horizontalLayout_2">
+      <layout class="QVBoxLayout" name="verticalLayout_2">
        <item>
         <widget class="QScrollArea" name="scrollArea_2">
          <property name="minimumSize">
           <size>
            <width>800</width>
-           <height>600</height>
+           <height>500</height>
           </size>
          </property>
          <property name="widgetResizable">
@@ -52,7 +52,7 @@
             <x>0</x>
             <y>0</y>
             <width>798</width>
-            <height>598</height>
+            <height>543</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout">
@@ -113,7 +113,7 @@
               <bool>true</bool>
              </property>
              <property name="sortingEnabled">
-              <bool>false</bool>
+              <bool>true</bool>
              </property>
             </widget>
            </item>
