--- a/Projeto 3/Teste_Luiz/ProjetoCont/mainwindow.ui
+++ b/Projeto 3/Teste_Luiz/ProjetoCont/mainwindow.ui
@@ -17,17 +17,117 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Estoque Master 2000</string>
+  </property>
+  <property name="styleSheet">
+   <string notr="true">#MainWindow{
+	background-color: rgb(8, 108, 162);
+}
+
+QToolBar {
+    background:rgb(8, 108, 162);
+    spacing: 3px; /* spacing between items in the tool bar */
+	padding: 5px 5px;
+	border-color: rgb(8, 108, 162);
+}
+
+QToolButton {
+  background: transparent; 
+}
+
+QToolButton:pressed {
+    background-color: rgb(100, 171, 208);
+}
+
+#centralwidget{
+	background-color:rgb(100, 171, 208);
+	color: rgb(255, 255, 255);
+}
+QMenuBar {
+	color: rgb(255, 255, 255);
+	background-color: rgb(3, 69, 105);
+    spacing: 3px; /* spacing between menu bar items */
+}
+
+QMenuBar::item {
+    padding: 1px 4px;
+    background: transparent;
+    border-radius: 2px;
+}
+
+QMenuBar::item:selected { /* when selected using mouse or keyboard */
+ background:rgb(4, 92, 139);
+}
+
+QMenuBar::item:pressed {
+    background:rgb(4, 92, 139);
+}
+#statusbar{
+  background-color: white;
+}
+
+#tabWidget{
+	background-color: white;
+	border: 3px solid rgb(0, 85, 0);
+	border-radius: 10px;
+	border-color: rgb(255, 85, 0);
+}
+QTabWidget::pane {
+  border: 1px solid rgb(8, 108, 162);
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  top:-1px; 
+  background: rgb(60, 157, 208); 
+} 
+
+QTabBar::tab {
+  background: rgb(3, 69, 105); 
+  border: 1px solid rgb(8, 108, 162);
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  color: rgb(255, 255, 255);
+  padding: 5px;
+  width: 150px;
+  height:20px;
+} 
+
+QTabBar::tab:selected { 
+  background:rgb(100, 171, 208); 
+  font: 100 10pt &quot;MS Shell Dlg 2&quot;;
+  color: rgb(0, 0, 0);
+  margin-bottom: -1px; 
+}</string>
   </property>
   <widget class="QWidget" name="centralwidget">
+   <property name="styleSheet">
+    <string notr="true"/>
+   </property>
    <layout class="QVBoxLayout" name="verticalLayout">
+    <item>
+     <widget class="QLabel" name="label">
+      <property name="text">
+       <string>Versão 1.0</string>
+      </property>
+     </widget>
+    </item>
     <item>
      <widget class="QTabWidget" name="tabWidget">
       <property name="minimumSize">
        <size>
-        <width>800</width>
+        <width>0</width>
         <height>500</height>
        </size>
+      </property>
+      <property name="font">
+       <font>
+        <weight>50</weight>
+        <bold>false</bold>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">#tabWidget{
+	background-color: white;
+}</string>
       </property>
       <property name="currentIndex">
        <number>-1</number>
@@ -48,14 +148,22 @@
     </item>
    </layout>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QStatusBar" name="statusbar">
+   <property name="styleSheet">
+    <string notr="true">&lt;h1&gt;
+Versão 1.0
+&lt;h1&gt;
+
+</string>
+   </property>
+  </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
      <width>878</width>
-     <height>20</height>
+     <height>18</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_Produto">
@@ -85,6 +193,15 @@
   <widget class="QToolBar" name="toolBar">
    <property name="windowTitle">
     <string>toolBar</string>
+   </property>
+   <property name="movable">
+    <bool>false</bool>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>30</width>
+     <height>30</height>
+    </size>
    </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
