--- a/Projeto 3/Teste_Luiz/ProjetoCont/cadastro.ui
+++ b/Projeto 3/Teste_Luiz/ProjetoCont/cadastro.ui
@@ -56,9 +56,10 @@
               <widget class="QLabel" name="label">
                <property name="font">
                 <font>
+                 <family>Verdana</family>
                  <pointsize>14</pointsize>
-                 <weight>75</weight>
-                 <bold>true</bold>
+                 <weight>50</weight>
+                 <bold>false</bold>
                 </font>
                </property>
                <property name="text">
@@ -462,9 +463,10 @@
                </property>
                <property name="font">
                 <font>
+                 <family>Verdana</family>
                  <pointsize>14</pointsize>
-                 <weight>75</weight>
-                 <bold>true</bold>
+                 <weight>50</weight>
+                 <bold>false</bold>
                 </font>
                </property>
                <property name="text">
