--- a/Projeto 3/Teste_Luiz/ProjetoCont/Arquivos_de_Recursos.qrc
+++ b/Projeto 3/Teste_Luiz/ProjetoCont/Arquivos_de_Recursos.qrc
@@ -12,5 +12,6 @@
         <file>Imagens/qt.png</file>
         <file>Imagens/avatar_Rodrigo.png</file>
         <file>Imagens/avatar.png</file>
+        <file>Imagens/avatar_Taylor.png</file>
     </qresource>
 </RCC>
