--- a/Projeto 3/Teste_Luiz/ProjetoCont/sobre.ui
+++ b/Projeto 3/Teste_Luiz/ProjetoCont/sobre.ui
@@ -221,7 +221,7 @@ QLabel{
         </font>
        </property>
        <property name="text">
-        <string>&gt; Taylor Nobrega</string>
+        <string>&gt; Taylor K. C. Nobrega</string>
        </property>
       </widget>
      </item>
