--- a/Projeto 3/Teste_Luiz/ProjetoCont/mainwindow.ui
+++ b/Projeto 3/Teste_Luiz/ProjetoCont/mainwindow.ui
@@ -78,7 +78,9 @@ QTabWidget::pane {
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   top:-1px; 
-  background: rgb(60, 157, 208); 
+  background-image: url(:/imagem/Imagens/merchandising-de-mercearia.png) no-repeat center center fixed;
+  background-size: 50px 50px;
+
 } 
 
 QTabBar::tab {
